[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/blob face.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlayerBlob.gd" type="Script" id=2]
[ext_resource path="res://Sprites/roundlight.png" type="Texture" id=3]
[ext_resource path="res://Sprites/blob.png" type="Texture" id=4]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.3
bounce = 0.5

[sub_resource type="CircleShape2D" id=2]
radius = 49.0

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 1, -8, 4, -8, 9, 8, -9, 8, -7, 0 )

[node name="PlayerBlob" type="RigidBody2D" groups=["CanSplash", "CanSquash", "Hitable", "Players"]]
z_index = 4
physics_material_override = SubResource( 1 )
contacts_reported = 11
contact_monitor = true
script = ExtResource( 2 )
slomoAmount = 0.05

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 1, -8, 4, -8, 7, -4, 9, 5, 9, 7, 8, 8, -8, 8, -9, 7, -9, 4, -6, -1 )

[node name="BlobBody" type="Sprite" parent="CollisionPolygon2D"]
modulate = Color( 0, 1, 0.0470588, 1 )
texture = ExtResource( 4 )

[node name="BlobFace" type="Sprite" parent="CollisionPolygon2D/BlobBody"]
position = Vector2( 2, 0 )
texture = ExtResource( 1 )

[node name="GunHand" type="Node2D" parent="CollisionPolygon2D"]
position = Vector2( 10, 0 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 0.8
shadow_enabled = true
shadow_gradient_length = 0.3

[node name="BulletTimeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletTimeArea"]
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource( 3 )

[node name="AmmoOutTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_PlayerBlob_body_entered"]
[connection signal="area_entered" from="BulletTimeArea" to="." method="_on_BulletTimeArea_area_entered"]
[connection signal="area_exited" from="BulletTimeArea" to="." method="_on_BulletTimeArea_area_exited"]
[connection signal="timeout" from="AmmoOutTimer" to="." method="_on_AmmoOutTimer_timeout"]
